--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -13,3 +13,13 @@
 form .error {
     color: #B94A48;
 }
+
+.tempBox {
+    font-size: 60px;
+    color:#000000;
+}
+
+.temp {
+    font-size: 100px;
+    color:#FF0000;
+}
