Appliance Page Init

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,12 +8,14 @@ html
     link(href='/css/material.min.css', rel='stylesheet')
     link(href='/css/ripples.min.css', rel='stylesheet')
     link(href='/css/custom.css', rel='stylesheet')
+    link(href='/css/bootstrap-switch.css', rel='stylesheet')
     block scripts
       script(src='http://code.jquery.com/jquery-1.10.2.min.js')
       script(src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js')
       script(src='/js/ripples.min.js')
+      script(src='/js/bootstrap-switch.js')
       script(src='/js/material.min.js')
-      
+
   body
     div.navbar.navbar-inverse.navbar-static-top(role='navigation')
       .container
@@ -27,7 +29,9 @@ html
         .collapse.navbar-collapse
           ul.nav.navbar-nav
             li
-              a(href='/') home
+              a(href='/monitor') Temperature
+            li
+              a(href='/control') Control
       script(src='http://code.jquery.com/jquery-1.10.2.min.js')
       script(src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js')
       script(src='js/ripples.min.js')
