--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,11 +10,10 @@ html
     link(href='/css/custom.css', rel='stylesheet')
     link(href='/css/bootstrap-switch.css', rel='stylesheet')
     block scripts
-      script(src='http://code.jquery.com/jquery-1.10.2.min.js')
-      script(src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js')
-      script(src='/js/ripples.min.js')
-      script(src='/js/bootstrap-switch.js')
-      script(src='/js/material.min.js')
+      //-script(src='http://code.jquery.com/jquery-1.10.2.min.js')
+      //-script(src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js')
+      //-script(src='/js/ripples.min.js')
+      //-script(src='/js/material.min.js')
 
   body
     div.navbar.navbar-inverse.navbar-static-top(role='navigation')
@@ -36,5 +35,6 @@ html
       script(src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js')
       script(src='js/ripples.min.js')
       script(src='js/material.min.js')
+      script(src='/js/bootstrap-switch.js')
     .container
       block content
