Appliance Page Design #2

--- a/views/control.jade
+++ b/views/control.jade
@@ -10,22 +10,22 @@ block content
       .col-sm-6 Fridge
       |     
       .col-sm-6
-        input(type='checkbox', name='my-checkbox', checked='checked', data-off-color='warning')
+        input(type='checkbox', name='my-checkbox',id="box1", checked='checked', data-off-color='warning')
     br
     .row
       .col-sm-6 Music Player
       |     
       .col-sm-6
-        input(type='checkbox', name='my-checkbox', checked='checked', data-off-color='warning')
+        input(type='checkbox', name='my-checkbox',id="box2", checked='checked', data-off-color='warning')
     br
     .row
       .col-sm-6 Oven
       |     
       .col-sm-6
-        input(type='checkbox', name='my-checkbox', checked='checked', data-off-color='warning')
+        input(type='checkbox', name='my-checkbox',id="box3", checked='checked', data-off-color='warning')
     br
     .row
       .col-sm-6 Laptop
       |     
       .col-sm-6
-        input(type='checkbox', name='my-checkbox', checked='checked', data-off-color='warning')
+        input(type='checkbox', name='my-checkbox',id="box4", checked='checked', data-off-color='warning')
