POST Request eventloop-blocking

--- a/views/control.jade
+++ b/views/control.jade
@@ -25,7 +25,7 @@ block content
         input(type='checkbox', name='my-checkbox',id="box3", checked='checked', data-off-color='warning')
     br
     .row
-      .col-sm-6 Laptop
+      .col-sm-6 Laptop Charger
       |     
       .col-sm-6
         input(type='checkbox', name='my-checkbox',id="box4", checked='checked', data-off-color='warning')
