--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,17 +3,13 @@ html
   head
     title JARVIS
     meta(charset='UTF-8')-
+    meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
     link(href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css', rel='stylesheet')
     link(href='/css/roboto.min.css', rel='stylesheet')
     link(href='/css/material.min.css', rel='stylesheet')
     link(href='/css/ripples.min.css', rel='stylesheet')
     link(href='/css/custom.css', rel='stylesheet')
     link(href='/css/bootstrap-switch.css', rel='stylesheet')
-    block scripts
-      //-script(src='http://code.jquery.com/jquery-1.10.2.min.js')
-      //-script(src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js')
-      //-script(src='/js/ripples.min.js')
-      //-script(src='/js/material.min.js')
 
   body
     div.navbar.navbar-inverse.navbar-static-top(role='navigation')
