Added ShowMACS, Maintenance

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -26,7 +26,9 @@ html
             li
               a(href='/monitor') Temperature
             li
-              a(href='/control') Control
+              a(href='/control') Appliance Control
+            li
+              a(href='/showMacs') Bluetooth MACs
       script(src='http://code.jquery.com/jquery-1.10.2.min.js')
       script(src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js')
       script(src='js/ripples.min.js')
