Fixed Control Init states and added bmac

--- a/views/showMac.jade
+++ b/views/showMac.jade
@@ -1,5 +1,9 @@
 extends layout
 
 block content
+  script(src='/js/bmac.js')
   .jumbotron
     h1 BMACs in Range
+    br
+    .macs
+      | No MACs in range
