--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -27,3 +27,10 @@ form .error {
 .appcontrol {
     font-size: 30px;
 }
+
+.macs {
+    font-size: 24px;
+    font-weight: normal;
+    font-style: italic;
+    color: #C0C0C0;
+}
