--- a/views/control.jade
+++ b/views/control.jade
@@ -13,7 +13,7 @@ block content
         input(type='checkbox', name='my-checkbox',id="box1", checked='checked', data-off-color='warning')
     br
     .row
-      .col-sm-6 Music Player
+      .col-sm-6 Garage Opener
       |     
       .col-sm-6
         input(type='checkbox', name='my-checkbox',id="box2", checked='checked', data-off-color='warning')
@@ -25,7 +25,7 @@ block content
         input(type='checkbox', name='my-checkbox',id="box3", checked='checked', data-off-color='warning')
     br
     .row
-      .col-sm-6 Laptop Charger
+      .col-sm-6 Charger
       |     
       .col-sm-6
         input(type='checkbox', name='my-checkbox',id="box4", checked='checked', data-off-color='warning')
