--- a/views/layout.jade
+++ b/views/layout.jade
@@ -20,7 +20,7 @@ html
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          a.navbar-brand(href='/') JARVIS HomeAuto | Control Center
+          a.navbar-brand(href='/') JARVIS | Control Center
         .collapse.navbar-collapse
           ul.nav.navbar-nav
             li
