--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -15,12 +15,12 @@ form .error {
 }
 
 .tempBox {
-    font-size: 60px;
+    font-size: 40px;
     color:#000000;
 }
 
 .temp {
-    font-size: 100px;
+    font-size: 80px;
     color:#FF0000;
 }
 
@@ -33,4 +33,25 @@ form .error {
     font-weight: normal;
     font-style: italic;
     color: #C0C0C0;
+}
+
+.btn-circle {
+  width: 160px;
+  height: 160px;
+  text-align: center;
+  padding: 6px 0;
+  font-size: 12px;
+  line-height: 1.42;
+  border-radius: 80px;
+}
+
+.fire-icon {
+    font-size: 80px;
+}
+
+.panic-div {
+    font-size: 40px;
+    font-weight: bold;
+    color: red;
+    font-style: italic;
 }
