--- a/views/control.jade
+++ b/views/control.jade
@@ -7,6 +7,10 @@ block content
     br
     .container
     .row
+      .col-sm-12(style='text-align:center;') 
+        button.btn.btn-primary.all_off
+          | All off
+    .row
       .col-sm-6 Fridge
       |     
       .col-sm-6
