--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,7 +12,7 @@ html
     link(href='/css/bootstrap-switch.css', rel='stylesheet')
 
   body
-    div.navbar.navbar-inverse.navbar-static-top(role='navigation')
+    div.navbar.navbar-inverse.navbar-fixed-top(role='navigation')
       .container
         .navbar-header
           button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
@@ -29,10 +29,14 @@ html
               a(href='/control') Appliance Control
             li
               a(href='/showMacs') Bluetooth MACs
+            li
+              a(href='/help') Help
+            li
+              a(href='/about') About
       script(src='http://code.jquery.com/jquery-1.10.2.min.js')
       script(src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js')
       script(src='js/ripples.min.js')
       script(src='js/material.min.js')
       script(src='/js/bootstrap-switch.js')
-    .container
+    .container(style="padding-top:80px")
       block content
