--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,6 +9,7 @@ html
     link(href='/css/material.min.css', rel='stylesheet')
     link(href='/css/ripples.min.css', rel='stylesheet')
     link(href='/css/custom.css', rel='stylesheet')
+    link(rel='stylesheet', href='http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css')
     link(href='/css/bootstrap-switch.css', rel='stylesheet')
 
   body
@@ -38,5 +39,7 @@ html
       script(src='js/ripples.min.js')
       script(src='js/material.min.js')
       script(src='/js/bootstrap-switch.js')
+      script(src='http://code.jquery.com/jquery-1.10.2.js')
+      script(src='http://code.jquery.com/ui/1.11.4/jquery-ui.js')
     .container(style="padding-top:80px")
       block content
