--- a/views/about.jade
+++ b/views/about.jade
@@ -5,10 +5,12 @@ block content
     h1 About the project
     p(style="color: #A0A0A0;") 
       br
-      | Version: 1.0.0.0a
+      b Version:
+      br
+      | 1.0.0.0a
       br
       br
-      | Developed by:
+      b Developed by:
       br
       | Rounaq Jhunjhunu Wala
       br
@@ -17,5 +19,3 @@ block content
       | Varun Jain
       br
       | Parikshit Diwan
-        
-      
