--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,6 +9,7 @@ html
     link(href='/css/material.min.css', rel='stylesheet')
     link(href='/css/ripples.min.css', rel='stylesheet')
     link(href='/css/custom.css', rel='stylesheet')
+    link(href='/css/jquery.nouislider.min.css', rel='stylesheet')
     link(rel='stylesheet', href='http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css')
     link(href='/css/bootstrap-switch.css', rel='stylesheet')
 
@@ -38,8 +39,9 @@ html
       script(src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js')
       script(src='js/ripples.min.js')
       script(src='js/material.min.js')
+      script(src='js/layout.js')
       script(src='/js/bootstrap-switch.js')
-      script(src='http://code.jquery.com/jquery-1.10.2.js')
-      script(src='http://code.jquery.com/ui/1.11.4/jquery-ui.js')
+      script(src='http://cdnjs.cloudflare.com/ajax/libs/noUiSlider/6.2.0/jquery.nouislider.min.js')
+       
     .container(style="padding-top:80px")
       block content
