--- a/views/showTemp.jade
+++ b/views/showTemp.jade
@@ -11,5 +11,13 @@ block content
       center
         h1 AC Settings
         br
-      #actemp
-        | Set AC Temperature
+        #actemp
+          | AC Temperature
+          br
+          #acTempBox
+            | 12 °C
+          .btn.btn-info.btn-ac-dec
+            | COOL
+          | &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          .btn.btn-danger.btn-ac-inc
+            | WARM
