--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,7 +9,8 @@ html
     link(href='/css/material.min.css', rel='stylesheet')
     link(href='/css/ripples.min.css', rel='stylesheet')
     link(href='/css/custom.css', rel='stylesheet')
-    link(href='/css/jquery.nouislider.min.css', rel='stylesheet')
+    link(href='/css/slider.css', rel='stylesheet')
+    //-link(href='/css/jquery.nouislider.min.css', rel='stylesheet')
     link(rel='stylesheet', href='http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css')
     link(href='/css/bootstrap-switch.css', rel='stylesheet')
 
@@ -41,6 +42,7 @@ html
       script(src='js/material.min.js')
       script(src='js/layout.js')
       script(src='/js/bootstrap-switch.js')
-      script(src='http://cdnjs.cloudflare.com/ajax/libs/noUiSlider/6.2.0/jquery.nouislider.min.js') 
+      script(src='/js/bootstrap-slider.js')
+      //-script(src='http://cdnjs.cloudflare.com/ajax/libs/noUiSlider/6.2.0/jquery.nouislider.min.js') 
     .container(style="padding-top:80px")
       block content
