--- a/views/layout.jade
+++ b/views/layout.jade
@@ -35,6 +35,8 @@ html
             li
               a(href='/help') Help
             li
+              a(href="/users") Users
+            li
               a(href='/about') About
       script(src='http://code.jquery.com/jquery-1.10.2.min.js')
       script(src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js')
