--- a/views/index.jade
+++ b/views/index.jade
@@ -12,11 +12,17 @@ block content
         span.glyphicon.glyphicon-wrench.glyph
         span(style="font-size:20px") &nbsp;&nbsp;Appliance Control 
       a.list-group-item(href='/showMacs')
-        span.glyphicon.glyphicon-user.glyph
+        span.glyphicon.mdi-notification-bluetooth-audio.glyph
         span(style="font-size:20px") &nbsp;&nbsp;Bluetooth MACs
+      a.list-group-item(href='/help')
+        span.glyphicon.mdi-communication-comment.glyph
+        span(style="font-size:20px") &nbsp;&nbsp;Help
+      a.list-group-item(href='/about')
+        span.glyphicon.glyphicon-user.glyph
+        span(style="font-size:20px") &nbsp;&nbsp;About
       br
     button.home-btn.btn.btn-success.btn-circle.btn-xl(type='button')
-      i.glyphicon.glyphicon-fire.fire-icon
+      i.glyphicon.mdi-alert-error.fire-icon
     br
     .panic-div
       | Help is on the way!
