Maintenence, No CDN

--- a/views/index.jade
+++ b/views/index.jade
@@ -6,10 +6,10 @@ block content
     //- img(src='/images/logo-big.jpeg') -//
     .list-group
     a.list-group-item(href='/monitor')
-        span.glyphicon.glyphicon-asterisk.glyph  
+        span.glyphicon.mdi-device-brightness-low.glyph  
         span(style="font-size:20px") &nbsp;&nbsp;Temperature
       a.list-group-item(href='/control')
-        span.glyphicon.glyphicon-wrench.glyph
+        span.glyphicon.mdi-action-swap-vert.glyph
         span(style="font-size:20px") &nbsp;&nbsp;Appliance Control 
       a.list-group-item(href='/showMacs')
         span.glyphicon.mdi-notification-bluetooth-audio.glyph
