--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,14 +4,14 @@ html
     title JARVIS
     meta(charset='UTF-8')-
     meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
-    link(href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css', rel='stylesheet')
+    link(href='/css/bootstrap.min.css', rel='stylesheet')
     link(href='/css/roboto.min.css', rel='stylesheet')
     link(href='/css/material.min.css', rel='stylesheet')
     link(href='/css/ripples.min.css', rel='stylesheet')
     link(href='/css/custom.css', rel='stylesheet')
     link(href='/css/slider.css', rel='stylesheet')
     //-link(href='/css/jquery.nouislider.min.css', rel='stylesheet')
-    link(rel='stylesheet', href='http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css')
+    link(rel='stylesheet', href='/css/jquery-ui.css')
     link(href='/css/bootstrap-switch.css', rel='stylesheet')
 
   body
@@ -38,11 +38,11 @@ html
               a(href="/users") Users
             li
               a(href='/about') About
-      script(src='http://code.jquery.com/jquery-1.10.2.min.js')
-      script(src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js')
-      script(src='js/ripples.min.js')
-      script(src='js/material.min.js')
-      script(src='js/layout.js')
+      script(src='/js/jquery-1.10.2.min.js')
+      script(src='/js/bootstrap.min.js')
+      script(src='/js/ripples.min.js')
+      script(src='/js/material.min.js')
+      script(src='/js/layout.js')
       script(src='/js/bootstrap-switch.js')
       script(src='/js/bootstrap-slider.js')
       //-script(src='http://cdnjs.cloudflare.com/ajax/libs/noUiSlider/6.2.0/jquery.nouislider.min.js') 
