--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,6 +10,7 @@ html
     link(href='/css/ripples.min.css', rel='stylesheet')
     link(href='/css/custom.css', rel='stylesheet')
     link(href='/css/slider.css', rel='stylesheet')
+    //-link(href='/css/jquery.nouislider.min.css', rel='stylesheet')
     link(rel='stylesheet', href='/css/jquery-ui.css')
     link(href='/css/bootstrap-switch.css', rel='stylesheet')
 
@@ -44,4 +45,6 @@ html
       script(src='/js/layout.js')
       script(src='/js/bootstrap-switch.js')
       script(src='/js/bootstrap-slider.js')
+      //-script(src='http://cdnjs.cloudflare.com/ajax/libs/noUiSlider/6.2.0/jquery.nouislider.min.js') 
+    .container(style="padding-top:80px")
       block content
